--- a/regallery.html
+++ b/regallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Practice For Mini Challenge 1</title>
-    <link rel="stylesheet" href="regallery_style.css">
+    <link rel="stylesheet" href="regallery-style.css">
 </head>
 <body>
     <div class="container">
